Fixed styling issue on Firefox

--- a/assets/home/style.css
+++ b/assets/home/style.css
@@ -49,6 +49,8 @@
   -webkit-margin-start: 0;
   -webkit-margin-end: 0;
   -webkit-padding-start: 0;
+  margin: 0;
+  padding: 0;
 }
 
 .column li {
